Prevent thumbnail from shrinking if title is too long

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -143,6 +143,7 @@
 
 .item__thumbnail {
   grid-area: thumbnail;
+  flex-shrink: 0;
   position: relative;
   width: 120px;
   height: 120px / 16 * 9;
